fix spacing issues

--- a/frontend_v2/src/app/components/challenge/challengesettings/challengesettings.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengesettings/challengesettings.component.scss
@@ -3,7 +3,7 @@
 
 .challenge-card {
   .bottom-card-container {
-    padding-top: 0px;
+    padding: 0px 30px;
     .settings-section {
       padding: 50px;
       border: 1px solid;
@@ -13,7 +13,7 @@
     }
   }
   .row {
-    margin: 4% 0px 4% 0px;
+    margin: 20px 0px 3% 0px;
   }
 }
 
